# axiom_kernal

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: conformance.yml
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: main.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: capability.rs  drivers.rs  eventbus.rs  eventlog.rs  facade.rs  kernel.rs  lease.rs  lib.rs  migration.rs  runstore.rs  scheduler.rs  shell.rs  snapshot.rs  subrun.rs  transport.rs
crates/axiom-spec/: Cargo.toml
crates/axiom-spec/src/: lib.rs
sdks/go/: README.md  agent.go  go.mod  spec.go  spec_test.go
sdks/go/cmd/build-coding-patch-small/: main.go
sdks/go/workspace/: builtin.go  registry.go
sdks/python/: README.md  pyproject.toml
sdks/python/axiom_runtime_sdk_py/: __init__.py  builder.py
sdks/python/scripts/: build_coding_patch_small.py
sdks/typescript/: README.md  package.json
sdks/typescript/scripts/: build-coding-patch-small.mjs
sdks/typescript/src/: index.mjs  index.ts
spec/v1/: axiom.proto  axiom.schema.json
